--- a/_config.yml
+++ b/_config.yml
@@ -106,59 +106,77 @@ style:
 
 ############################### Layout ###############################
 cover:
-  scheme: docs # docs, blog
+  scheme: blog # docs, blog
   layout: dock # search (搜索), dock (坞), featured (精选), focus (焦点)
   display:
     home: true
     archive: true
     others: false # can be written in front-matter 'cover: true'
-  logo: https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/Logo-Cover@3x.png
-  title: ''
+  logo: # https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/Logo-Cover@3x.png
+  title: "一个虾子's Blog"
   subtitle: ''
-  search: A Wonderful Theme for Hexo # search bar placeholder
+  search: 可以搜索文章哦... # search bar placeholder
   features:
-    - name: 文档
-      icon: fas fa-book
-      url: /v3/getting-started/
-    - name: 帮助
-      icon: fas fa-question-circle
-      url: faqs/
-    - name: 示例
-      icon: fas fa-play-circle
-      url: /examples/
-    - name: 社区
-      icon: fas fa-fan fa-spin
-      url: /contributors/
+    - name: 首页
+      icon: fal fa-home
+      url: /
+    - name: 分类
+      icon: fal fa-code-merge
+      url: categories/
+    - name: 归档
+      icon: fal fa-stream
+      url: archives/
+    - name: 关于
+      icon: fal fa-info-circle
+      url: about/
 
 
 
 # Navigation Bar
 navbar:
   logo: # choose [img] or [icon + title]
-    img: https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/Logo-NavBar@3x.png
+    img: # https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/Logo-NavBar@3x.png
     icon:
-    title:
+    title: "一个虾子"
   menu:
     # The following can be written in `blog/source/_data/menu.yml`
-    - name: 博客
-      icon: fas fa-rss
+    - name: 首页
+      icon: fad fa-home
       url: /
-    - name: 分类
-      icon: fas fa-folder-open
-      url: categories/
-    - name: 标签
-      icon: fas fa-tags
-      url: tags/
-    - name: 归档
-      icon: fas fa-archive
+    - name: 文章
+      icon: fad fa-folder-open
       url: archives/
-    - name: 友链
-      icon: fas fa-link
-      url: friends/
+      rows:
+        - name: 时间线
+          icon: fal fa-calendar-edit
+          url: archives/
+        - name: 分类
+          icon: fal fa-code-merge
+          url: categories/
+        - name: 标签
+          icon: fal fa-tags
+          url: tags/
     - name: 关于
-      icon: fas fa-info-circle
+      icon: fad fa-info-circle
       url: about/
-  search: Search...   # Search bar placeholder
+    - name: 更多
+      icon: fad fa-comment-dots
+      rows:
+        - name: 友链
+          icon: fal fa-link
+          url: friends/
+        - name: 资源
+          icon: fal fa-download
+          rows:
+            - name: 网盘
+              icon: fad fa-cloud
+              url: https://pan.lino-kakeri.live/
+        - name: hr
+        - name: 捐助下吧！
+          url: donate/
+          rows:
+            - name: 感谢！！(*≧ω≦)
+  search: 搜索...   # Search bar placeholder
 
 
 
@@ -167,7 +185,7 @@ layout:
   # 文章列表（主页、自定义的列表）布局
   on_list:
     # 列表中每一篇文章的meta信息
-    meta: [title, author, category, date, wordcount, counter, valinecount, pin]
+    meta: [title, date, category, pin]
     # 列表类页面的侧边栏
     sidebar: [blogger, category, tagcloud, qrcode]
     # read more button
@@ -180,10 +198,10 @@ layout:
     # 其中，title只在header中有效，music和thumbnail无需在这里设置，文章中有则显示
     # 如果tags放置在meta.header中，那么在post列表中不显示（因为卡片下方已经有了）
     meta:
-      header: [title, author, category, date, pin]
+      header: [title, author, dete, category, wordcount, pin]
       footer: [updated, tags, btns, share]
     # 文章页面的侧边栏
-    sidebar: [qrcode, toc]
+    sidebar: [toc]
   # 文章布局，参数继承自 on_page
   on_post:
     # 文章页脚，自动在每一篇文章末尾添加
@@ -198,7 +216,7 @@ meta:
   # 默认文章作者（可在front-matter中覆盖）
   author:
     avatar:
-    name: 请设置文章作者
+    name: 一个虾子
     url: /
   # 文章创建日期
   date:
@@ -240,8 +258,8 @@ meta:
       img: https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/logo/128/weibo.png
     # - id: qrcode # 当id为qrcode时需要安装插件  npm i -S hexo-helper-qrcode
     #   img: https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/logo/128/wechat.png
-    # - id: telegram
-    #   img: https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/logo/128/telegram.png
+    - id: telegram
+      img: https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/logo/128/telegram.png
   # 链接
   btns:
     edit:
@@ -281,12 +299,12 @@ widget:
   blogger:
     class: blogger
     display: [desktop, mobile] # [desktop, mobile]
-    avatar: https://cdn.jsdelivr.net/gh/volantis-x/cdn-org/blog/Logo-NavBar@3x.png
+    avatar: https://cdn.jsdelivr.net/gh/Sakano-x/file/avatar.jpg
     shape: rectangle # circle, rectangle
-    url: /about/
+    url: about/
     title:
     subtitle:
-    jinrishici: true # Poetry Today. You can set a string, and it will be displayed when loading fails.
+    jinrishici: false # Poetry Today. You can set a string, and it will be displayed when loading fails.
     social: true
   # ---------------------------------------
   # toc widget (valid only in articles)
@@ -307,7 +325,7 @@ widget:
     header:
       icon: fas fa-folder-open
       title: 文章分类
-      url: /blog/categories/
+      url: categories/
   # ---------------------------------------
   # tagcloud widget
   tagcloud:
@@ -316,7 +334,7 @@ widget:
     header:
       icon: fas fa-tags
       title: 热门标签
-      url: /blog/tags/
+      url: tags/
     min_font: 14
     max_font: 24
     color: true
@@ -339,7 +357,7 @@ widget:
     blockquote: true
     permalink: '本文永久链接是：'
     content:
-      - '博客内容遵循 署名-非商业性使用-相同方式共享 4.0 国际 (CC BY-NC-SA 4.0) 协议'
+      - '本文采用 [CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/) 许可协议，转载时请注意遵守协议并注明来源'
       - permalink
   # ---------------------------------------
   # qrcode widget
@@ -408,17 +426,17 @@ widget:
 
 footer:
   # layout of footer: [aplayer, social, license, info, copyright]
-  layout: [aplayer, social, license, info, copyright]
+  layout: [social, copyright]
   social:
     - icon: fas fa-rss
       url: atom.xml
     - icon: fas fa-envelope
       url: mailto:me@xxx.com
     - icon: fab fa-github
-      url: https://github.com/xaoxuu
+      url: https://github.com/sakano-x
     - icon: fas fa-headphones-alt
       url: https://music.163.com/#/user/home?id=63035382
-  copyright: '[Copyright © 2017-2020 XXX](/)'
+  copyright: '[Copyright © 2020 一个虾子](/)'
   # You can add your own property here. (Support markdown, for example: br: '<br>')
   br: '<br>'
 
@@ -474,7 +492,7 @@ plugins:
   busuanzi: https://cdn.jsdelivr.net/gh/volantis-x/cdn-busuanzi@2.3/js/busuanzi.pure.mini.js
 
   # npm i --save hexo-wordcount
-  wordcount: #true
+  wordcount: true
 
   ######## Plugins for ...
   # Button Ripple Effect
@@ -567,8 +585,8 @@ plugins:
   # https://darkmodejs.learn.uno
   # 暗黑模式样式：https://github.com/volantis-x/hexo-theme-volantis/blob/master/source/css/_third-party/darkmode.styl
   darkmodejs:
-    enable: false
-    js: https://cdn.jsdelivr.net/npm/darkmode-js@1.5/lib/darkmode-js.min.js
+    enable: true
+    js: https://cdn.jsdelivr.net/npm/darkmode-js@1.5.6/lib/darkmode-js.min.js
     bottom: 32px
     right: unset
     left: 16px
